--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
   <h1><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></h1>
   <img src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal" width="200px">
+  <h3 class="About">About me</h3>
   <p>I am brasilian, happely married and I currently live in the city of Jaraguá do Sul, state of Santa Catarina Brazil. I practiced law as a lawyer for ten (10) year and have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
   Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills and the hability to learn. I am communicative, an enthusiasthic about new projects, I have a really good grammar and communication skills.</p>
+  <h3 class="Skills">Skills</h3>
+  <ul>
+    <li>Communicative</li>
+    <li>Wide capacity to learn new skills.</li>
+    <li>Good grammar</li>
+    <li>Sharp social skills</li>
+    <li>Pragmatic</li>
+    <li>Excellent resercher</li>
+  </ul>
 </body>
 </html>
