Complet list of exercises with external an internal link

--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Douglas de Oliveira Ialamov</title>
+  <title><a href=".foto">Portfolio Douglas de Oliveira Ialamov</a></title>
 </head>
 <body>
-  <h1><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></h1>
-  <img src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal" width="200px">
+  <h1><a href=""><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></a></h1>
+
+  <ul>
+    <li><strong><a href=".About">About</a></strong></li>
+    <li><strong><a href=".Skills">Skills</a></strong></li>
+    <li><strong><a href="#Linkedin">Linkedin</a></strong></li>
+  </ul>
+  <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal" width="200px">
   <h3 class="About">About me</h3>
   <p>I am brasilian, happely married and I currently live in the city of Jaraguá do Sul, state of Santa Catarina Brazil. I practiced law as a lawyer for ten (10) year and have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
   Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills and the hability to learn. I am communicative, an enthusiasthic about new projects, I have a really good grammar and communication skills.</p>
   <h3 class="Skills">Skills</h3>
   <ul>
-    <li>Communicative</li>
-    <li>Wide capacity to learn new skills.</li>
-    <li>Good grammar</li>
-    <li>Sharp social skills</li>
-    <li>Pragmatic</li>
-    <li>Excellent resercher</li>
+    <li><em>Communicative</em></li>
+    <li><em>Wide capacity to learn new skills.</em></li>
+    <li><em>Good grammar</em></li>
+    <li><em>Sharp social skills</em></li>
+    <li><em>Pragmatic</em></li>
+    <li><em>Excellent resercher</em></li>
   </ul>
+
+  <p id="linkedin"><a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin</a></p>
 </body>
 </html>
