Correction of internal links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><a href=".foto">Portfolio Douglas de Oliveira Ialamov</a></title>
+  <title>Portfolio de Douglas de Oliveira Ialamov</title>
 </head>
 <body>
-  <h1><a href=""><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></a></h1>
+  <h1><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></h1>
 
   <ul>
-    <li><strong><a href=".About">About</a></strong></li>
-    <li><strong><a href=".Skills">Skills</a></strong></li>
+    <li><strong><a href="About">About</a></strong></li>
+    <li><strong><a href="Skills">Skills</a></strong></li>
     <li><strong><a href="#Linkedin">Linkedin</a></strong></li>
   </ul>
   <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal" width="200px">
