--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
   <h1><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></h1>
 
   <ul>
-    <li><strong><a href="About">About</a></strong></li>
-    <li><strong><a href="Skills">Skills</a></strong></li>
+    <li><strong><a href="#About">About</a></strong></li>
+    <li><strong><a href="#Skills">Skills</a></strong></li>
     <li><strong><a href="#Linkedin">Linkedin</a></strong></li>
+    <li><strong><a href="#projects">Projects</a></strong></li>
   </ul>
+
   <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal" width="200px">
-  <h3 class="About">About me</h3>
+  
+  <h3 id="About">About me</h3>
+  
   <p>I am brasilian, happely married and I currently live in the city of Jaraguá do Sul, state of Santa Catarina Brazil. I practiced law as a lawyer for ten (10) year and have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
   Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills and the hability to learn. I am communicative, an enthusiasthic about new projects, I have a really good grammar and communication skills.</p>
-  <h3 class="Skills">Skills</h3>
+  
+  <h3 id="Skills">Skills</h3>
+  
   <ul>
     <li><em>Communicative</em></li>
     <li><em>Wide capacity to learn new skills.</em></li>
@@ -29,5 +35,7 @@
   </ul>
 
   <p id="linkedin"><a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin</a></p>
+
+  <h3 id="project">Projects</h3>
 </body>
 </html>
