--- a/index.html
+++ b/index.html
@@ -4,34 +4,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Portfolio de Douglas de Oliveira Ialamov</title>
 </head>
 <body>
-  <h1><strong>DOUGLAS DE OLIVERIA IALAMOV</strong></h1>
+  <h1 class="upperText">DOUGLAS DE OLIVERIA IALAMOV</h1>
 
-  <ul>
-    <li><strong><a href="#About">About</a></strong></li>
-    <li><strong><a href="#Skills">Skills</a></strong></li>
-    <li><strong><a href="#Linkedin">Linkedin</a></strong></li>
-    <li><strong><a href="#projects">Projects</a></strong></li>
+  <ul class="skillsInDisplay">
+    <li class="menu"><a href="#About">About</a></li>
+    <li class="menu"><a href="#Skills">Skills</a></li>
+    <li class="menu"><a href="#linkedin">Linkedin</a></li>
+    <li class="menu"><a href="#projects">Projects</a></li>
   </ul>
 
-  <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal" width="200px">
+  <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal">
+
+  <p class="personal-information">Brasilian developer from Jaraguá do Sul, State of Santa Catarina</p>
   
   <h3 id="About">About me</h3>
   
-  <p>I am brasilian, happely married and I currently live in the city of Jaraguá do Sul, state of Santa Catarina Brazil. I practiced law as a lawyer for ten (10) year and have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
-  Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills and the hability to learn. I am communicative, an enthusiasthic about new projects, I have a really good grammar and communication skills.</p>
+  <p>I am happely married and I currently live in Brazil. I used to be a lawyer, carrear of ten (10) year and also I have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
+  Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills. I am communicative, an enthusiasthic about new projects, I have a really good grammar and communication skills.</p>
   
   <h3 id="Skills">Skills</h3>
   
   <ul>
-    <li><em>Communicative</em></li>
-    <li><em>Wide capacity to learn new skills.</em></li>
-    <li><em>Good grammar</em></li>
-    <li><em>Sharp social skills</em></li>
-    <li><em>Pragmatic</em></li>
-    <li><em>Excellent resercher</em></li>
+    <li>Communicative</li>
+    <li>Wide capacity to learn new skills</li>
+    <li>Good grammar</li>
+    <li>Sharp social skills</li>
+    <li>Pragmatic</li>
+    <li>Excellent resercher</li>
   </ul>
 
   <p id="linkedin"><a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin</a></p>
