Added dots and background color H1 padding and border.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h3 id="About">About me</h3>
   
   <p>I am happely married and I currently live in Brazil. I used to be a lawyer, carrear of ten (10) year and also I have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
-  Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills. I am communicative, an enthusiasthic about new projects, I have a really good grammar and communication skills.</p>
+  Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills. I am communicative, an enthusiasthic about new projects, I have a really good grammar and great communication skills.</p>
   
   <h3 id="Skills">Skills</h3>
   
