--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <h1 class="upperText">DOUGLAS DE OLIVEIRA IALAMOV</h1>
   </header>
   <main>
-    </div>
-        <div class="photo-and-text">   
-          <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal">
-          <p class="personal-information">Brazilian developer from Jaraguá do Sul, State of Santa Catarina</p>
-        </div>
-    </div>
-    <div>
+      <div class="photo-and-text">   
+        <img class="foto" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto pessoal">
+        <p class="personal-information">Brazilian developer from Jaraguá do Sul, State of Santa Catarina</p>
+      </div>
       <article class="about-me-skills">
         <h3 id="About">About me</h3>
-          <p>I am happely married and I currently live in Brazil. I used to be a lawyer, carrear of ten (10) year and also I have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe. <br>
+          <p>I am happely married and I currently live in Brazil. I used to be a lawyer, carrear of ten (10) year and also I have worked as a translator between portuguese and english, but now I am studying to be a developer at the fantastic programming school Trybe and SENAI. <br>
           Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills, specilialy social skills. I am communicative, an enthusiasthic about new projects, I have a really good grammar and great communication skills.</p>
+          <div class="box">
+            <div>
+            </div>
+          </div>
       </article>
-      <div>
         <h3 id="Skills">Skills</h3>
         <ul>
           <li>Communicative</li>
