Adaptação para outros dispositivos e tentativa de resolução de problemas.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <title>Portfolio de Douglas de Oliveira Ialamov</title>
@@ -29,13 +30,14 @@
       <div class="self information">
         <div>
           <img class="self" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto de Douglas Ialamov">
-          <h2>Contact information</h2>
+          <h2>Contact information:</h2>
           <ul class="information">
             <li>Age: 33</li>
             <li>Country: Brazil</li>
             <li>Residence: Jaraguá do Sul</li>
             <li>State: Santa Catarina</li>
             <li>Contact: +55 48 996 281 707</li>
+            <li>skype: douglas.ialamov></li>
             <li>Open to work</li>
           </ul>
         </div>
@@ -49,6 +51,6 @@
       </article>
     </section>
     <section>
-      <h2>Projects</h2>
+      <h2 id="projects">Projects</h2>
     </section>
   </main>
