--- a/index.html
+++ b/index.html
@@ -16,41 +16,42 @@
         <li><a href="#Skills">Skills</a></li>
         <li><a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/" target="_blank">Linkedin</a></li>
         <li><a href="#projects">Projects</a></li>
-        <h1>DOUGLAS DE OLIVEIRA IALAMOV</h1>
       </ul>
-      <div class="banner">
-        <div>
-        </div>
-      </div>
-      </div>
     </nav>
+      <h1>DOUGLAS DE OLIVEIRA IALAMOV</h1>
+      <div class="banner"></div>
+      </div>
   </header>
   <main>
-    <aside>
-      <div class="self information">
-        <div>
-          <img class="self" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto de Douglas Ialamov">
-          <h2>Contact information:</h2>
-          <ul class="information">
-            <li>Age: 33</li>
-            <li>Country: Brazil</li>
-            <li>Residence: Jaraguá do Sul</li>
-            <li>State: Santa Catarina</li>
-            <li>Contact: +55 48 996 281 707</li>
-            <li>skype: douglas.ialamov></li>
-            <li>Open to work</li>
-          </ul>
-        </div>
-      </aside>
+    <div>
       <article class="road">
-        <h2 id="About">The road so far...</h2>
+        <h1 id="About">The road so far...</h1>
           <p>Happely married and I currently live in Brazil. Professional career spanning over a decade in various roles as a lawyer and translator/interpreter (portuguese/english), for which i am grateful for the expirience those professions provided me. <br>
           I am fully envolved in chasing my dream and passion, besides my wife, that are the study and personal development as programmer in JavaScript, HTML, CSS and JAVA 
           at the Trybe and SENAI educational institutions, which are providing me a really rich expirience and knowlegde in the area with over a 2400 hours combined of programming training and learning over a period of one year.<br>
           Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills for the new area os study, specilialy social ones that can gather people with different background to work together. Also, I am communicative, an enthusiasthic about new projects, I have a really good grammar and great communication skills and I am eager/anxious/longing to star working in the area.</p>
-      </article>
-    </section>
+          <img src="/images/IMG_2904.JPG" alt="Fotos de campo de feno na Escócia em preto e branco">
+      </article> 
+      <aside>
+        <img class="self" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto de Douglas Ialamov">
+        <h2 class="contact">Contact information:</h2>
+        <ul class="information">
+          <li>Age: 33</li>
+          <li>Country: Brazil</li>
+          <li>Residence: Jaraguá do Sul</li>
+          <li>State: Santa Catarina</li>
+          <li>Contact: +55 48 996 281 707</li>
+          <li>skype: douglas.ialamov></li>
+          <li>Open to work</li>
+        </ul>
+      </aside>
+    </div>
     <section>
       <h2 id="projects">Projects</h2>
     </section>
+    
   </main>
+  <footer>
+    <h3>Realizado por Douglas de Oliveira Ialamov</h3>
+    <h3>E-mail: douglas.ialamov@gmail.com</h3>    
+  </footer>
