Finalização do site.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,18 @@
       </aside>
     </div>
     <section>
-      <h2 id="projects">Projects</h2>
+      <h2>Projects</h2>
+      <h2 ><a href="https://github.com/ialamov"><img id="projects" src="/images/github.png" alt="ÍCONE DO GIT HUB"></a></h2>
+      <h2>Professional skills in development</h2>
+        <ul class="professionalSkills">   
+          <li class="list">Full-stack | HTML/CSS | JAVA | SPRING | JavaScript | React | TypeScript | Node.js | MySQL | MongoDB</li>
+          <li class="list">TRANSLATOR | INTERPRETER</li>
+          <li class="list">LAWYER</li>
+        </ul>
     </section>
-    
   </main>
   <footer>
     <h3>Realizado por Douglas de Oliveira Ialamov</h3>
-    <h3>E-mail: douglas.ialamov@gmail.com</h3>    
+    <h3>E-mail: douglas.ialamov@gmail.com</h3>
+    <p>Imagem de favicom do site <div>Ícones feitos por <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/br/" title="Flaticon">www.flaticon.com</a></div></p>
   </footer>
