--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div>
       <article class="road">
         <h1 id="About">The road so far...</h1>
-          <p>Happely married and I currently live in Brazil. Professional career spanning over a decade in various roles as a lawyer and translator/interpreter (portuguese/english), for which i am grateful for the expirience those professions provided me. <br>
+          <p>Happely married and I currently live in Brazil. Professional career spanning over a decade in various roles as a lawyer and translator/interpreter (portuguese/english), for which i am grateful for the experience those professions provided me. <br>
           I am fully envolved in chasing my dream and passion, besides my wife, that are the study and personal development as programmer in JavaScript, HTML, CSS and JAVA 
           at the Trybe and SENAI educational institutions, which are providing me a really rich expirience and knowlegde in the area with over a 2400 hours combined of programming training and learning over a period of one year.<br>
-          Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills for the new area os study, specilialy social ones that can gather people with different background to work together. Also, I am communicative, an enthusiasthic about new projects, I have a really good grammar and great communication skills and I am eager/anxious/longing to star working in the area.</p>
-          <img src="/images/IMG_2904.JPG" alt="Fotos de campo de feno na Escócia em preto e branco">
+          Due to an extense study in law and translation throughout the years, I have developed a wide range of usefull skills for the new area os study, specilialy social ones that can gather people with different background to work together. Also, I am communicative, an enthusiasthic about new projects, I have a really good grammar and great communication skills and I am eager/anxious/longing to start working in the area.</p>
+          <img src="/images/ IMG_2904.jpeg" alt="Fotos de campo de feno na Escócia em preto e branco">
       </article> 
       <aside>
         <img class="self" src="/images/WhatsApp Image 2021-03-02 at 15.09.07.jpeg" alt="Foto de Douglas Ialamov">
